# fetpype

./: .gitignore  404.html  LICENSE  README.md  biblio.bib  citation.cff  debug_nesvor.py  index.html  mkdocs.yml  nesvor.py  objects.inv  pyproject.toml  setup.py  test_nipype.py
api_nodes/: index.html
api_pipelines/: index.html
api_utils/: index.html
api_workflows/: index.html
configs/: default.yaml  default_docker.yaml  default_sg.yaml  example_sg_marseille.yaml  index.html  sg_marseille.yaml
contributing/: index.html
css/: home.css
doc/: doc_marseille.md
docs/: .pages  api_nodes.md  api_pipelines.md  api_utils.md  api_workflows.md  biblio.bib  configs.md  contributing.md  datasink.md  index.md  input_data.md  methods.md  output_data.md  pipelines.md  preprocessing.md  reconstruction.md  run_parts.md  segmentation.md  surface.md  tutorial.md
fetpype/: __init__.py  _version.py  definitions.py
initial_scripts/: a_brain_segmentation.py  b_denoising.py  c_bias_correction.py
input_data/: index.html
joss_paper/: paper.bib  paper.md
local/: combine_stacks.py  run_sh.sh
methods/: index.html
nodes/: index.html
old_params/: params_dhcp_upf.json  params_svrtk_bounti_recon.json
output_data/: index.html
pipelines/: index.html
preprocessing/: index.html
reconstruction/: index.html
run_parts/: index.html
search/: search_index.json
segmentation/: index.html
surface/: index.html
test_data/: dataset_description.json  participants.csv
tests/: conftest.py  manualtest_nesvor_synthdata.py  test_bids_datasink.py  test_nesvor.py  (+6 more)
(+85 files in other folders)
